# magizh_quiz_app_v4

./: .replit  .windsurfrules  README.md  client_secret_2_87719918014-t8hsa0kbh5r89kn7nh18ced47b4dbgiq.apps.googleusercontent.com.json  replit.md
SecureText1/SecureText/: .gitignore  .replit  Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quiz_app.db  quiz_app1.db  replit.md
SecureText1/SecureText/attached_assets/: Pasted--You-get-ONE-prompt-I-m-going-to-sleep-Work-autonomously-Make-reasonable-assumptions-If-blocked-1757265139831_1757265139831.txt
SecureText1/SecureText/server/: auth.py  database.py  jobs.py  main.py  models.py  quiz_app.db  quiz_app1.db  readme.md  requirements.txt  schemas.py  seed_data.py  test_decks.db
SecureText1/SecureText/server/routers/: analytics.py  auth.py  cards.py  decks.py  import_export.py  quiz.py  users.py
SecureText1/SecureText/server/services/: gamification.py  spaced_repetition.py
SecureText1/SecureText/server/tests/: conftest.py  test_auth.py  test_cards.py  test_decks.py  test_spaced_repetition.py
SecureText1/SecureText/web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
SecureText1/SecureText/web/src/: App.tsx  index.css
SecureText1/SecureText/web/src/components/: AppContent.tsx  CompleteSignup.tsx  DeckCard.tsx  DeckDetail.tsx  NotFound.tsx  StudyModeComponent.tsx  UserCard.tsx  UserProfile.tsx  UserProfileOld.tsx
SecureText1/SecureText/web/src/contexts/: AuthContext.tsx
SecureText1/SecureText/web/src/lib/: api.ts
(+21 files in other folders)
